--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "license": "MIT",
   "bin": {
-    "component-lab": "./src/cli.js"
+    "component-lab": "./release/src/cli.js"
   },
   "scripts": {
     "copy": "cpy package.json README.md index.html release",
@@ -40,12 +40,13 @@
     "webpack-dev-server": "v2.1.0-beta.9"
   },
   "devDependencies": {
-    "@angular/common": "4.0.0-rc.5",
-    "@angular/compiler": "4.0.0-rc.5",
-    "@angular/core": "4.0.0-rc.5",
-    "@angular/platform-browser": "4.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "4.0.0-rc.5",
-    "@angular/router": "4.0.0-rc.5",
+    "@angular/animations": "4.0.0",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
     "@types/chalk": "^0.4.30",
     "@types/lodash": "^4.14.37",
     "@types/node": "^6.0.45",
@@ -53,16 +54,17 @@
     "rimraf": "^2.5.4",
     "rollup": "^0.36.3",
     "rxjs": "^5.1.0",
-    "typescript": "^2.0.3",
+    "typescript": "^2.1.0",
     "uglifyjs": "^2.4.10",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.8.4"
   },
   "peerDependencies": {
-    "@angular/common": "4.0.0-rc.5",
-    "@angular/core": "4.0.0-rc.5",
-    "@angular/platform-browser": "4.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "4.0.0-rc.5",
-    "@angular/router": "4.0.0-rc.5",
+    "@angular/animations": "4.0.0",
+    "@angular/common": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
     "rxjs": "^5.1.0"
   }
 }
